--- a/popcorn-server/pom.xml
+++ b/popcorn-server/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
         <dependency>
             <groupId>com.photowey</groupId>
-            <artifactId>popcorn-starting-printer</artifactId>
+            <artifactId>popcorn-printer</artifactId>
         </dependency>
 
         <dependency>
