--- a/popcorn-listener/pom.xml
+++ b/popcorn-listener/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>popcorn-logging</artifactId>
+    <artifactId>popcorn-listener</artifactId>
 
     <properties>
     </properties>
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>com.photowey</groupId>
-            <artifactId>popcorn-listener</artifactId>
+            <artifactId>popcorn-common</artifactId>
         </dependency>
 
         <dependency>
@@ -28,8 +28,8 @@
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
