--- a/popcorn-printer/pom.xml
+++ b/popcorn-printer/pom.xml
@@ -10,26 +10,21 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>popcorn-logging</artifactId>
+    <artifactId>popcorn-printer</artifactId>
 
     <properties>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.photowey</groupId>
-            <artifactId>popcorn-listener</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
