feat: Add: 1.popcorn and executor engine;2.app started listener

--- a/popcorn-autoconfigure/pom.xml
+++ b/popcorn-autoconfigure/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.photowey</groupId>
             <artifactId>popcorn-logging</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.photowey</groupId>
+            <artifactId>popcorn-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
