feat: Add: 1.ext schedule module;2.config properties;3.project docs.

--- a/popcorn-core/pom.xml
+++ b/popcorn-core/pom.xml
@@ -17,8 +17,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>com.photowey</groupId>
+            <artifactId>popcorn-common</artifactId>
         </dependency>
     </dependencies>
 
