--- a/popcorn-scheduler/popcorn-scheduler-core/pom.xml
+++ b/popcorn-scheduler/popcorn-scheduler-core/pom.xml
@@ -16,6 +16,12 @@
     </properties>
 
     <dependencies>
+        <!--
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        -->
     </dependencies>
 
 </project>
