--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,9 @@
 
         <!-- spring boot -->
         <spring.boot.version>2.7.12</spring.boot.version>
+
+        <!-- mybatis-plus -->
+        <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
     </properties>
     <!-- @formatter:on -->
 
@@ -60,6 +63,17 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-core</artifactId>
+                <version>${mybatis.plus.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.photowey</groupId>
                 <artifactId>popcorn-boot</artifactId>
