--- a/popcorn-scheduler/popcorn-scheduler-repository-database/pom.xml
+++ b/popcorn-scheduler/popcorn-scheduler-repository-database/pom.xml
@@ -20,6 +20,16 @@
             <groupId>com.photowey</groupId>
             <artifactId>popcorn-scheduler-repository</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
