feat: Add: 1.Schedule database services implements of base services .

--- a/popcorn-scheduler/popcorn-scheduler-kernel/pom.xml
+++ b/popcorn-scheduler/popcorn-scheduler-kernel/pom.xml
@@ -20,6 +20,11 @@
             <groupId>com.photowey</groupId>
             <artifactId>popcorn-autoconfigure</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.photowey</groupId>
+            <artifactId>popcorn-scheduler-service-database</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
