--- a/popcorn-scheduler/popcorn-scheduler-service/pom.xml
+++ b/popcorn-scheduler/popcorn-scheduler-service/pom.xml
@@ -16,6 +16,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.photowey</groupId>
+            <artifactId>popcorn-scheduler-repository</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
