--- a/popcorn-scheduler/popcorn-scheduler-core/pom.xml
+++ b/popcorn-scheduler/popcorn-scheduler-core/pom.xml
@@ -22,6 +22,15 @@
             <artifactId>lombok</artifactId>
         </dependency>
         -->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
