feat: Add: 1.ServiceEngine.

--- a/popcorn-scheduler/popcorn-scheduler-service/pom.xml
+++ b/popcorn-scheduler/popcorn-scheduler-service/pom.xml
@@ -18,6 +18,10 @@
     <dependencies>
         <dependency>
             <groupId>com.photowey</groupId>
+            <artifactId>popcorn-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.photowey</groupId>
             <artifactId>popcorn-scheduler-repository</artifactId>
         </dependency>
     </dependencies>
